--- a/rabbit-service.yml
+++ b/rabbit-service.yml
@@ -4,16 +4,20 @@ metadata:
   name: ingestor-rabbit
 spec:
   ports:
-  - port: 5672
+  - name: primary
+    port: 5672
     protocol: TCP
     targetPort: 5672
-  - port: 4369
+  - name: handshake
+    port: 4369
     protocol: TCP
     targetPort: 4369
-  - port: 25672
+  - name: worker1
+    port: 25672
     protocol: TCP
     targetPort: 25672
-  - port: 25671
+  - name: worker2
+    port: 25671
     protocol: TCP
     targetPort: 25671
   selector:
