Agregando path completo de ejecucion de celery para supervisor

--- a/ingest-celery.conf
+++ b/ingest-celery.conf
@@ -5,7 +5,7 @@
 
 
 [program:celey_ingest_csv]
-command=celery -A csv_ingestor worker --loglevel=info --app=csv_ingestor.queue.scheduler
+command=/usr/local/bin/celery -A csv_ingestor worker --loglevel=info --app=csv_ingestor.queue.scheduler
 
 user=root
 numprocs=1
